--- a/css/component-buttons.css
+++ b/css/component-buttons.css
@@ -1,12 +1,25 @@
 @font-face {
 	font-family: 'icomoon';
 	src:url('../fonts/icomoon/icomoon.eot');
+    src:url('../fonts/icomoon/icomoonV2.ttf');
 	src:url('../fonts/icomoon/icomoon.eot?#iefix') format('embedded-opentype'),
 		url('../fonts/icomoon/icomoon.woff') format('woff'),
 		url('../fonts/icomoon/icomoon.ttf') format('truetype'),
 		url('../fonts/icomoon/icomoon.svg#icomoon') format('svg');
 	font-weight: normal;
 	font-style: normal;
+}
+
+@font-face {
+    font-family: "FontAwesome";
+    font-weight: normal;
+    font-style : normal;
+    src : url("https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/fonts/fontawesome-webfont.eot?v=4.3.0");
+    src : url("https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/fonts/fontawesome-webfont.eot?#iefix&v=4.3.0") format("embedded-opentype"),
+    url("https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/fonts/fontawesome-webfont.woff2?v=4.3.0") format("woff2"),
+    url("https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/fonts/fontawesome-webfont.woff?v=4.3.0") format("woff"),
+    url("https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/fonts/fontawesome-webfont.ttf?v=4.3.0") format("truetype"),
+    url("https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/fonts/fontawesome-webfont.svg?v=4.3.0#fontawesomeregular") format("svg");
 }
 
 /* General button style (reset) */
@@ -111,6 +124,11 @@
 
 .icon-remove:before {
 	content: "\e00f";
+}
+
+.icon-times:before {
+    font-family: FontAwesome !important;
+	content: "\f00d";
 }
 
 .icon-cog:before {
@@ -679,8 +697,10 @@
 
 /* Button 5 */
 .btn-5 {
-	background: #823aa0;
-	color: #fff;
+	background: transparent;
+    padding: 25px 80px;
+    border: 3px solid #FFFFFF;
+    color: #FFFFFF;
 	height: 70px;
 	min-width: 260px;
 	line-height: 24px;
