--- a/css/custom.css
+++ b/css/custom.css
@@ -68,7 +68,7 @@
 }
 
 .landing-image {
-    background-image: url('../images/test/shutterstock_251466229-700x430.jpg') !important;
+    background-image: url('../images/splash.jpg') !important;
     background-size: cover !important;
 }
 
